# sdlrig

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: test.glsl
lib/adjustable/: Cargo.toml
lib/adjustable/src/: lib.rs
src/: appruntime.rs  fonts.rs  gfx_lowlevel.rs  gfxinfo.rs  gfxlowlevel.c  gfxlowlevel.h  gfxruntime.rs  glob.rs  lib.rs  renderspec.rs  shaderhelper.rs  spec_engine.rs  texruntime.rs  vidruntime.rs
